--- a/TIA.WebApp/Views/_ViewImports.cshtml
+++ b/TIA.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using TIA.WebApp
 @using TIA.WebApp.Models
+@using TIA.Core.DTOClasses
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, TIA.WebApp
