--- a/TIA.WebApp/Views/Shared/_CreateEdit.cshtml
+++ b/TIA.WebApp/Views/Shared/_CreateEdit.cshtml
@@ -6,14 +6,14 @@
         <h4 class="modal-title">Каталог</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
     </div>
-  
+
     <form asp-action="CreateEdit" asp-controller="Catalog" method="post" enctype="multipart/form-data">
 
         @Html.AntiForgeryToken()
 
         <div class="modal-body form-horizontal">
 
-            <input asp-for="@Model.ParentCatalogId" type="hidden" class="form-control" />
+            <input asp-for="@Model.IsActive" type="hidden" class="form-control" />
 
             <div class="form-group row">
                 @Html.HiddenFor(model => model.Id)
@@ -30,17 +30,37 @@
             </div>
 
             <div class="form-group row">
-                <div class="offset-sm-2 col-sm-10">
-                    <div class="form-check">
-                        @Html.CheckBoxFor(model => model.IsActive, new { @class = "form-check-input" })
-                        @Html.LabelFor(model => model.IsActive, new { @class = "form-check-label" })
-                    </div>
+                @*@Html.LabelFor(model => model.ParentCatalogId, new { @class = "col-sm-2 col-form-label" })*@
+                <div class="col-sm-10">
+
+                    @*<label asp-for="ParentCatalogId" class = "col-sm-2 col-form-label"></label>
+                        <select asp-for="ParentCatalogId" asp-items="ViewBag.listCatalogs"></select>*@
+
+                    @*@Html.DropDownListFor(model=> model.ParentCatalogId, ViewData["listCatalogs"] as IEnumerable<SelectListItem>)*@
+
+                    <select asp-for="@Model.ParentCatalogId" placeholder="Родительский каталог" class="form-control">
+                        @foreach (CatalogDTO catalogDTO in (List<CatalogDTO>)ViewBag.listCatalogs)
+                        {
+                            <option value="@catalogDTO.Id">@catalogDTO.Title</option>
+                        }
+
+                    </select>
 
                 </div>
             </div>
 
+            @*<div class="form-group row">
+                    <div class="offset-sm-2 col-sm-10">
+                        <div class="form-check">
+                            @Html.CheckBoxFor(model => model.IsActive, new { @class = "form-check-input" })
+                            @Html.LabelFor(model => model.IsActive, new { @class = "form-check-label" })
+                        </div>
+
+                    </div>
+                </div>*@
+
         </div>
-     
+
         <div class="modal-footer">
             <button data-dismiss="modal" id="cancel" class="btn btn-default" type="button">Отмена</button>
             <button class="btn btn-success relative" id="btnSubmit" type="submit">
@@ -48,7 +68,7 @@
                 Сохранить
             </button>
         </div>
-      
+
     </form>
 
 </div>
