--- a/TIA.WebApp/Views/Shared/_Modal.cshtml
+++ b/TIA.WebApp/Views/Shared/_Modal.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div aria-hidden="true" aria-labelledby="modal-create-edit-catalog-label" role="dialog" tabindex="-1" id="modal-create-edit-catalog" class="modal fade">
+<div aria-hidden="true" aria-labelledby="modal-create-edit-catalog-label" role="dialog" tabindex="-1" id="modal-view" class="modal fade">
     <div class="modal-dialog">
     </div>
 </div>
