Небольшие изменения и улучшение читабельности кода

--- a/TIA.WebApp/Views/Shared/_YesNoDialog.cshtml
+++ b/TIA.WebApp/Views/Shared/_YesNoDialog.cshtml
@@ -9,7 +9,7 @@
 
             <button data-dismiss="modal" id="cancel" class="btn btn-default" type="button">Нет</button>
             <button class="btn btn-success relative" id="btnSubmit" type="submit">Да</button>
-            <button type="button" class="" onclick="deleteEntity(this)"></button>
+            @*<button type="button" class="" onclick="deleteEntity(this)"></button>*@
         </div>
     </form>
 </div>
