--- a/TIA.WebApp/Views/Catalog/CatalogTable.cshtml
+++ b/TIA.WebApp/Views/Catalog/CatalogTable.cshtml
@@ -6,38 +6,38 @@
         <tr><th>Название</th><th>Идентификатор</th><th>Родитель</th></tr>
         @foreach (CatalogDTO catalogDTO in Model)
         {
-    <tr>
-        <td>@catalogDTO.Title</td>
-        <td>@catalogDTO.Id</td>
-        @if (catalogDTO.ParentCatalogId != null)
-        {
-            <td>@catalogDTO.ParentCatalogId</td>
-        }
-        else
-        {
-            <td>Корневой каталог</td>
-        }
+            <tr>
+                <td>@catalogDTO.Title</td>
+                <td>@catalogDTO.Id</td>
+                @if (catalogDTO.ParentCatalogId != null)
+                {
+                    <td>@catalogDTO.ParentCatalogId</td>
+                }
+                else
+                {
+                    <td>Корневой каталог</td>
+                }
 
-        <td>
-            <a class="btn btn-primary popupCreateEdit" data-url="Catalog/CreateEdit" data-item-id="0" data-parent-id="@catalogDTO.Id"
-               data-toggle="modal" data-target="#modal-view" id="Catalog-C">
-                +
-            </a>
-        </td>
-        <td>
-            <a class="btn btn-primary popupCreateEdit" data-url="Catalog/CreateEdit" data-item-id="@catalogDTO.Id" data-parent-id="@catalogDTO.ParentCatalogId"
-               data-toggle="modal" data-target="#modal-view" id="Catalog-E">
-                /
-            </a>
-        </td>
-        <td>
-            <a class="btn btn-primary popupDelete" data-url="Catalog/Delete" data-id="@catalogDTO.Id"
-               data-toggle="modal" data-target="#modal-view" id="Catalog-D">
-                -
-            </a>
-        </td>
+                <td>
+                    <a class="btn btn-primary popupCreateEdit" data-url="/Catalog/CreateEdit" data-item-id="0" data-parent-id="@catalogDTO.Id"
+                       data-toggle="modal" data-target="#modal-view" id="Catalog-C">
+                        +
+                    </a>
+                </td>
+                <td>
+                    <a class="btn btn-primary popupCreateEdit" data-url="/Catalog/CreateEdit" data-item-id="@catalogDTO.Id" data-parent-id="@catalogDTO.ParentCatalogId"
+                       data-toggle="modal" data-target="#modal-view" id="Catalog-E">
+                        /
+                    </a>
+                </td>
+                <td>
+                    <a class="btn btn-primary popupDelete" data-url="/Catalog/Delete" data-id="@catalogDTO.Id"
+                       data-toggle="modal" data-target="#modal-view" id="Catalog-D">
+                        -
+                    </a>
+                </td>
 
-    </tr>
+            </tr>
         }
     </table>
 }
