--- a/TIA.WebApp/Views/_ViewImports.cshtml
+++ b/TIA.WebApp/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using TIA.WebApp
 @using TIA.WebApp.Models
 @using TIA.Core.DTOClasses
+@using Newtonsoft.Json
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, TIA.WebApp
