--- a/TIA.WebApp/Views/Catalog/CatalogProducts.cshtml
+++ b/TIA.WebApp/Views/Catalog/CatalogProducts.cshtml
@@ -1,28 +1,32 @@
 ﻿@model CatalogDTO
 @{
-    ViewData["Title"] = "Catalog";
+    ViewData["Title"] = "Products";
 }
 
-@if (Model?.Products != null && Model?.Products.Count() > 0)
-{
-    <table id="ProductTable">
-        <tr><th>Название</th><th>Описание</th><th>Цена</th></tr>
-        @foreach (ProductDTO productDTO in Model.Products)
-        {
-            @await Html.PartialAsync("_ProductTableData", productDTO)
-        }
-    </table>
-}
-else
-{
-    <h1>Товаров нет((</h1>
-    <h2>Наполни меня (͡° ͜ʖ ͡°)</h2>
-}
+<div id="DataPage" data-catalog-id="@Model.Id">
+    @if (Model?.Products != null && Model?.Products.Count() > 0)
+    {
+        <div id="ProductsData">
+            @await Html.PartialAsync("_TableView", Model.Products)
+        </div>
+    }
+    else
+    {
+        <div id="ProductsData">
+            
+        </div>
+        <div id="NoElementsData">
+            <h1>Товаров нет((</h1>
+            <h2>Наполни меня (͡° ͜ʖ ͡°)</h2>
+        </div>
+    }
 
-<div>
-    <a class="btn btn-primary popupCreateEdit" data-url="/Product/CreateEdit" data-item-id="0" data-parent-id="@Model.Id"
-       data-toggle="modal" data-target="#modal-view" id="Product-C">
-        +
-    </a>
+    <div>
+        <a class="btn btn-primary popupCreateEdit" data-url="/Product/CreateEdit" data-item-id="0" data-parent-id="@Model.Id"
+           data-toggle="modal" data-target="#modal-view" id="Product-C">
+            +
+        </a>
+    </div>
 </div>
+
 
