--- a/TIA.WebApp/Views/Shared/_ProductTableElementData.cshtml
+++ b/TIA.WebApp/Views/Shared/_ProductTableElementData.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ProductDTO
 
-<tr id="product-@Model.Id">
+<tr id="item-@Model.Id">
     <td>@Model.Title</td>
     <td>@Model.Description</td>
     <td>@Model.Price</td>
