View 4 - переместил некоторые .cshtml - исправил методы контролеров - добавлены новые VM

--- a/TIA.WebApp/Views/Catalog/CatalogProducts.cshtml
+++ b/TIA.WebApp/Views/Catalog/CatalogProducts.cshtml
@@ -13,7 +13,7 @@
     else
     {
         <div id="ProductsData">
-            
+
         </div>
         <div id="NoElementsData">
             <h1>Товаров нет((</h1>
@@ -29,4 +29,7 @@
     </div>
 </div>
 
+@*@section Scripts{
+    
+}*@
 
