View 6 - добавил логику с ValidateAntiForgeryToken - сделал "рекурсивное" удаление дерева каталогов

--- a/TIA.WebApp/Views/Shared/Components/CatalogTree/_TreeNode.cshtml
+++ b/TIA.WebApp/Views/Shared/Components/CatalogTree/_TreeNode.cshtml
@@ -3,7 +3,7 @@
 <ul>
     @foreach (CatalogDTO catalogDTO in Model)
     {
-        <li id="item-@catalogDTO.Id">
+        <li id="treeNode-@catalogDTO.Id">
             <span>
                 @*<a asp-controller="Catalog" asp-action="Products" asp-route-id="@catalogDTO.Id">@catalogDTO.Title</a>*@
                 <a data-url="@($"/Catalog/Products?id={catalogDTO.Id}")" data-id="@catalogDTO.Id" name="ctlgBtn">@catalogDTO.Title</a>
