--- a/TIA.WebApp/Views/Catalog/_ProductTableElementData.cshtml
+++ b/TIA.WebApp/Views/Catalog/_ProductTableElementData.cshtml
@@ -6,13 +6,13 @@
     <td>@Model.Price</td>
     <td>
         <a class="btn btn-primary popupCreateEdit" data-url="/Product/CreateEdit" data-item-id="@Model.Id" data-parent-id="@Model.ParentCatalogId"
-           data-toggle="modal" data-target="#modal-view" id="Product-E">
+           data-toggle="modal" data-target="#modal-view">
             /
         </a>
     </td>
     <td>
         <a class="btn btn-primary popupDelete" data-url="/Product/Delete" data-id="@Model.Id"
-           data-toggle="modal" data-target="#modal-view" id="Product-D">
+           data-toggle="modal" data-target="#modal-view">
             -
         </a>
     </td>
