--- a/TIA.WebApp/Views/Catalog/CatalogProducts.cshtml
+++ b/TIA.WebApp/Views/Catalog/CatalogProducts.cshtml
@@ -23,7 +23,7 @@
 
     <div>
         <a class="btn btn-primary popupCreateEdit" data-url="/Product/CreateEdit" data-item-id="0" data-parent-id="@Model.Id"
-           data-toggle="modal" data-target="#modal-view" id="Product-C">
+           data-toggle="modal" data-target="#modal-view">
             +
         </a>
     </div>
