View 8 - Заменил IEnumerable на List во всех вьюхах и контроллерах, связанных с DTO типами - Добавил Layout для Каталогов - Разделили метод Products на Products/TableData - Метод GetEmptyTable в контролере каталогов удалён - YesNoDialog теперь вызывается без подгрузки с сервера Model 4 - Заменил IEnumerable на List в DTO- / Ef- типах - В DS классах поправил код, убрав лишнее и изменил некоторые методы - Переписаны возвращаемые типы методов внутри модели. Теперь они асинхронно выполняются в другом потоке с возможностью вызывать другие асинхронные задачи. - Реализован запрет на удаление, пока есть данные у каталога

--- a/TIA.WebApp/Views/Catalog/CatalogTable.cshtml
+++ b/TIA.WebApp/Views/Catalog/CatalogTable.cshtml
@@ -1,11 +1,14 @@
-﻿@model IEnumerable<CatalogDTO>
+﻿@model List<CatalogDTO>
+@{
+    Layout = "~/Views/Shared/_CatalogLayout.cshtml";
+}
 
 <div id="DataPage">
     @if (Model != null && Model.Count() > 0)
     {
         <table>
             <tr><th>Название</th><th>Идентификатор</th><th>Родитель</th></tr>
-            @foreach (CatalogDTO catalogDTO in Model)   
+            @foreach (CatalogDTO catalogDTO in Model)
             {
                 <tr id="item-@catalogDTO.Id">
                     <td>@catalogDTO.Title</td>
@@ -47,12 +50,18 @@
         <h1>Каталогов нет((</h1>
         <h2>Наполни меня (͡° ͜ʖ ͡°)</h2>
     }
+
     <div>
         <a class="btn btn-primary popupCreateEdit" data-url="/Catalog/CreateEdit" data-item-id="0" data-parent-id="0"
            data-toggle="modal" data-target="#modal-view">
             +
         </a>
     </div>
+
+    @await Html.PartialAsync("_YesNoDialog", "Catalog")
+
 </div>
+
+
 
 
