--- a/TIA.WebApp/Views/Catalog/_TableView.cshtml
+++ b/TIA.WebApp/Views/Catalog/_TableView.cshtml
@@ -1,12 +1,31 @@
-﻿@model IEnumerable<ProductDTO>
+﻿@model CatalogDTO
 
-<table id="ProductTable">
-    <tr><th>Название</th><th>Описание</th><th>Цена</th></tr>
-    @if (Model != null)
+<div id="TableData" data-catalog-id="@Model.Id">
+    @if (Model?.Products != null && Model?.Products.Count() > 0)
     {
-        foreach (ProductDTO productDTO in Model)
-        {
-            @await Html.PartialAsync("_ProductTableElementData", productDTO)
-        }
+        <table id="ProductTable">
+            <tr><th>Название</th><th>Описание</th><th>Цена</th></tr>
+            @if (Model != null)
+            {
+                foreach (ProductDTO productDTO in Model?.Products)
+                {
+                    @await Html.PartialAsync("_ProductTableElementData", productDTO)
+                }
+            }
+        </table>
     }
-</table>
+    else
+    {
+        <div id="NoElementsData">
+            <h1>Товаров нет((</h1>
+            <h2>Наполни меня (͡° ͜ʖ ͡°)</h2>
+        </div>
+    }
+
+    <div>
+        <a class="btn btn-primary popupCreateEdit" data-url="/Product/CreateEdit" data-item-id="0" data-parent-id="@Model.Id"
+           data-toggle="modal" data-target="#modal-view">
+            +
+        </a>
+    </div>
+</div>
