--- a/TIA.WebApp/Views/Shared/_Layout.cshtml
+++ b/TIA.WebApp/Views/Shared/_Layout.cshtml
@@ -25,21 +25,21 @@
                         </li>
                     </ul>
                 </div>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Index">Home</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
 
     <div class="container">
         <main role="main" class="pb-3">
-            <div class="mainDiv">
-                <div class="leftSide">
-                    <vc:catalog-tree />
-                </div>
-                <partial name="_Modal" />
-                <div class="rightSide">
-                    @RenderBody()
-                </div>
-            </div>
+            <partial name="_Modal" />
+            @RenderBody()
         </main>
     </div>
 
