--- a/TIA.WebApp/Views/Product/_CreateEditProduct.cshtml
+++ b/TIA.WebApp/Views/Product/_CreateEditProduct.cshtml
@@ -34,7 +34,7 @@
             <div class="form-group row">
                 <label asp-for="Price" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
-                    <textarea asp-for="Price" class="form-control" placeholder="Цена товара"></textarea>
+                    <input asp-for="Price" class="form-control" placeholder="Цена товара"/>
                     <span asp-validation-for="Price"></span>
                 </div>
             </div>
