--- a/TIA.WebApp/Views/Shared/Components/CatalogTree/_TreeNode.cshtml
+++ b/TIA.WebApp/Views/Shared/Components/CatalogTree/_TreeNode.cshtml
@@ -5,8 +5,7 @@
     {
         <li id="treeNode-@catalogDTO.Id">
             <span>
-                @*<a asp-controller="Catalog" asp-action="Products" asp-route-id="@catalogDTO.Id">@catalogDTO.Title</a>*@
-                <a data-url="@($"/Catalog/Products?id={catalogDTO.Id}")" data-id="@catalogDTO.Id" name="ctlgBtn">@catalogDTO.Title</a>
+                <a data-url="@($"/Catalog/Products?id={catalogDTO.Id}")" data-id="@catalogDTO.Id" name="ctlgBtn" class="nav-link">@catalogDTO.Title</a>
             </span>
         </li>
 
