--- a/TIA.WebApp/Views/Shared/_CatalogLayout.cshtml
+++ b/TIA.WebApp/Views/Shared/_CatalogLayout.cshtml
@@ -4,13 +4,16 @@
 }
 
 
-<div class="mainDiv">
-    <div class="leftSide">
-        <vc:catalog-tree />
+<div class="container">
+    <div class="row">
+        <div class="col-md-2" style="background-color: dimgrey">
+            <vc:catalog-tree />
+        </div>
+        
+        <div class="col-md-10">
+            @RenderBody()
+        </div>
     </div>
-
-    <div class="rightSide">
-        @RenderBody()
-    </div>
+   
 </div>
 
