View 10 - Для админа появились вкладки "Пользователи" и "Роли" - CRUD для ролей и пользователей - Регистрация/Авторизация/Логаут - Ограничен доступ на некоторые контроллеры Model 6 - Изменён контекст DB на IdentityDBContext - Немного подредачил DS

--- a/TIA.WebApp/Views/_ViewImports.cshtml
+++ b/TIA.WebApp/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
-﻿@using TIA.WebApp
+﻿@using Microsoft.AspNetCore.Identity
+
+@using TIA.WebApp
 @using TIA.WebApp.Models
+@using TIA.Core.AspNetCoreEntities
 @using TIA.Core.DTOClasses
 @using TIA.WebApp.Extentions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
