--- a/TIA.WebApp/Views/Shared/_Layout.cshtml
+++ b/TIA.WebApp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Index">Каталоги</a>
                         </li>
 
+                        @if (User.IsInRole("admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Пользователи</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Роли</a>
+                            </li>
+                        }
+
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item ml-md-auto">
@@ -47,7 +57,7 @@
                                 <div class="row">
                                     <a class="nav-link col-6 text-dark" asp-area="" asp-controller="Account" asp-action="Login">Вход</a>
                                     <a class="nav-link col-6 text-dark" asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a>
-                                 </div>
+                                </div>
                             </li>
                         }
 
