--- a/TIA.WebApp/Views/Catalog/_TableView.cshtml
+++ b/TIA.WebApp/Views/Catalog/_TableView.cshtml
@@ -7,7 +7,7 @@
     @if (Model?.Products != null && Model?.Products.Count() > 0)
     {
         <table id="ProductTable">
-            <tr><th>Название</th><th>Описание</th><th>Цена</th><th>Дата</th></tr>
+            <tr><th>Название</th><th>Описание</th><th>Цена</th><th>Дата</th><th></th></tr>
             @if (Model != null)
             {
                 foreach (ProductDTO productDTO in Model?.Products)
@@ -21,14 +21,23 @@
     {
         <div id="NoElementsData">
             <h1>Товаров нет((</h1>
-            <h2>Наполни меня (͡° ͜ʖ ͡°)</h2>
+            @if (User.IsInRole("admin"))
+            {
+                <h2>Наполни меня (͡° ͜ʖ ͡°)</h2>
+            }
+
         </div>
     }
 
-    <div>
-        <a class="btn btn-primary popupCreateEdit" data-url="/Product/CreateEdit" data-item-id="0" data-parent-id="@Model.Id"
-           data-toggle="modal" data-target="#modal-view">
-            +
-        </a>
-    </div>
+    @if (User.IsInRole("admin"))
+    {
+        <div>
+            <a class="btn btn-primary popupCreateEdit" data-url="/Product/CreateEdit" data-item-id="0" data-parent-id="@Model.Id"
+               data-toggle="modal" data-target="#modal-view">
+                +
+            </a>
+        </div>
+    }
+
+
 </div>
