View 12 - Добавлена страница с выгрузкой отчёта Model 7 - Добавлена выгрузка отчёт с фильтрацией - Добавлена хранимая процедура для выгрузки отчёта

--- a/TIA.WebApp/Views/Shared/_Layout.cshtml
+++ b/TIA.WebApp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Index">Каталоги</a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductFullData">Отчёты</a>
+                        </li>
+
                         @if (User.IsInRole("admin"))
                         {
                             <li class="nav-item">
