--- a/TIA.WebApp/Views/_ViewImports.cshtml
+++ b/TIA.WebApp/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using TIA.WebApp.Models
 @using TIA.Core.AspNetCoreEntities
 @using TIA.Core.DTOClasses
+@using TIA.Core.StoredProcedureModels
 @using TIA.WebApp.Extentions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, TIA.WebApp
