--- a/TIA.WebInterface/Views/Shared/_Layout.cshtml
+++ b/TIA.WebInterface/Views/Shared/_Layout.cshtml
@@ -19,11 +19,44 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Index">Каталоги</a>
                         </li>
+
+                        @if (User.IsInRole("admin"))
+                        {
+                            @*<li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Пользователи</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Роли</a>
+                            </li>*@
+                        }
+
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item ml-md-auto">
+
+                                <div class="nav-item row">
+                                    <p class="col-8 text-dark">@User.Identity.Name</p>
+                                    <form class="col-4" method="post" asp-controller="Account" asp-action="Logout">
+                                        <input class="nav-item text-dark" type="submit" value="Выход" />
+                                    </form>
+                                </div>
+
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item ml-md-auto">
+                                <div class="row">
+                                    <a class="nav-link col-6 text-dark" asp-area="" asp-controller="Account" asp-action="Login">Вход</a>
+                                    <a class="nav-link col-6 text-dark" asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a>
+                                </div>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -43,6 +76,10 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/products.js" asp-append-version="true"></script>
+    <script src="~/js/catalogs.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
