--- a/TIA.WebInterface/Views/_ViewImports.cshtml
+++ b/TIA.WebInterface/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using TIA.WebInterface
 @using TIA.WebInterface.Models
+@using TIA.DataAccessLayer.DTOClasses
+@using TIA.DataAccessLayer.Models
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, TIA.WebInterface
